--- a/index.css
+++ b/index.css
@@ -112,7 +112,10 @@ color: #daa520;}
     min-width: 200px;}
 
 .row{flex-grow:1;
+    display:flex;
+    flex-direction: column;
     margin: 5px;
+    justify-content:center;
     width: 155px;
     padding: 5px;}
 
@@ -121,12 +124,13 @@ color: #daa520;}
 .row-body{text-align:-webkit-center;}
 
 .product-images{height: auto;
-    border-radius: 30px;
+    border-radius: 15px;
     width: 100%;}
 
     .product-images1{height: 61%;
-        border-radius: 30px;
+        border-radius: 15px;
         width: 100%;}
+
 
 
 .buy-now{text-align: center;
@@ -222,7 +226,7 @@ width: 28%;}
 
 /*mobile view*/
 
-@media (max-width: 320px){ 
+@media (min-width: 300px) and (max-width: 370px){ 
 
     .nav-bar>ul>li>a{color: #ffffff;
     }
@@ -358,7 +362,7 @@ transition: all 0.4s ease-in-out;
         
 
 }
-@media (min-width: 350px) and (max-width: 500px){ 
+@media (min-width: 371px) and (max-width: 500px){ 
     .nav-bar>ul>li>a{color: #ffffff;
     }
     
@@ -434,9 +438,9 @@ transition: all 0.4s ease-in-out;
 
 .goods-section1{margin:60px 5px 10px 5px;}
 
-.goods-section2{margin:30px 5px 10px 5px; }
+.goods-section2{margin:60px 5px 10px 5px; }
     
-.goods-section3{margin:30px 5px 50px 5px; }
+.goods-section3{margin:60px 5px 50px 5px; }
     
  .row{flex-grow:1;
     margin: 10px;
