--- a/index.css
+++ b/index.css
@@ -54,16 +54,16 @@ transition: width 0.7s ease-in-out;
 .hamburger{display: none;}
 
 
-section{margin: 70px 10px 0px 10px;
+section{margin: 70px 10px 30px 10px;
      height: auto;}
 
 .welcome-section{display: flex;
     flex-wrap: wrap;
-    gap: 60px;
+    gap: 30px;
 min-width: 200px;}
 
 .welcome-texts{flex-grow: 1;
-    width: 20%;
+    width: 35%;
     padding: 20px;
     margin-left: 20px;
 line-height: 1.5rem;
@@ -85,8 +85,16 @@ top: 90px;}
 color: white;}
 
 .welcome-image{flex-grow: 1;}
+.welcome-image > img{height: auto;
+    width: 90%;
+    position:unset;
+    left: 60px;
+    vertical-align: middle;
+    border-style: none;}
+
 .welcome-text-header{text-align: left;
     color: #190f50;
+    font-size:30px;
 padding: 5px;}
 
 
@@ -187,7 +195,7 @@ width: 28%;}
     .four-row-flexbox {
         height: auto;}
 
-        section{margin: 50px 10px 0px 10px;}
+        section{margin: 50px 10px 30px 10px;}
 
         .welcome-texts{top:0px;
         }
@@ -431,7 +439,7 @@ margin: 5px auto;
 transition: all 0.4s ease-in-out;
 -webkit-transition: all 0.4s ease-in-out;}
 
-.goods-section1{margin:60px 5px 10px 5px;}
+.goods-section1{margin:150px 5px 10px 5px;}
 
 .goods-section2{margin:60px 5px 10px 5px; }
     
